RESOLVED FIXED172258
Fix unsafe lambda capture in ContentRuleListStore::lookupContentRuleList()
https://bugs.webkit.org/show_bug.cgi?id=172258
Summary Fix unsafe lambda capture in ContentRuleListStore::lookupContentRuleList()
Chris Dumez
Reported 2017-05-17 19:22:26 PDT
Fix unsafe lambda capture in ContentRuleListStore::lookupContentRuleList().
Attachments
Patch (1.99 KB, patch)
2017-05-17 19:24 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-05-17 19:24:37 PDT
WebKit Commit Bot
Comment 2 2017-05-17 23:02:08 PDT
Comment on attachment 310473 [details] Patch Clearing flags on attachment: 310473 Committed r217036: <http://trac.webkit.org/changeset/217036>
WebKit Commit Bot
Comment 3 2017-05-17 23:02:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.