Fix unsafe lambda capture in ContentRuleListStore::lookupContentRuleList() https://bugs.webkit.org/show_bug.cgi?id=172258

Reviewed by Brady Eidson.

Fix unsafe lambda capture in ContentRuleListStore::lookupContentRuleList(). The String
was moved instead of calling isolatedCopy(), even though we're passing the String to
another thread.

* UIProcess/API/APIContentRuleListStore.cpp:
(API::ContentRuleListStore::lookupContentRuleList):


Canonical link: https://commits.webkit.org/189181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217036 268f45cc-cd09-0410-ab3c-d52691b4dbfc